// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Vegan Gelato Engine — real Mapper formulation matrix > almond routes distinctly across −11/−12/−13 1`] = `
[
  {
    "batch": 1000,
    "fat": 5.192,
    "fiber": 4.505,
    "ice": 46.056,
    "ingredients": [
      {
        "grams": 460.347,
        "id": "PI-ING-001409",
        "main": false,
        "name": "Water",
      },
      {
        "grams": 223.798,
        "id": "PI-ING-001587",
        "main": false,
        "name": "ALMOND DRINK · Beverage · Chilled",
      },
      {
        "grams": 46.998,
        "id": "PI-ING-000163",
        "main": false,
        "name": "REFINED COCONUT OIL · Elstar Fats Coconut · Dry",
      },
      {
        "grams": 165.611,
        "id": "PI-ING-000514",
        "main": false,
        "name": "Sucrose",
      },
      {
        "grams": 53.712,
        "id": "PI-ING-000494",
        "main": false,
        "name": "Dextrose (monohydrate)",
      },
      {
        "grams": 47.535,
        "id": "PI-ING-000456",
        "main": false,
        "name": "Inulin",
      },
      {
        "grams": 2,
        "id": "PI-ING-000492",
        "main": false,
        "name": "Tara gum",
      },
    ],
    "npac": 40.999,
    "pac": 27.479,
    "pod": 21.357,
    "protein": 0.157,
    "score": 10,
    "solids": 32.975,
    "sugars": 22.221,
    "temperature": -11,
    "violations": [],
    "water": 67.025,
  },
  {
    "batch": 1000,
    "fat": 5.8,
    "fiber": 5.014,
    "ice": 50.283,
    "ingredients": [
      {
        "grams": 397.4,
        "id": "PI-ING-001409",
        "main": false,
        "name": "Water",
      },
      {
        "grams": 250,
        "id": "PI-ING-001587",
        "main": false,
        "name": "ALMOND DRINK · Beverage · Chilled",
      },
      {
        "grams": 52.5,
        "id": "PI-ING-000163",
        "main": false,
        "name": "REFINED COCONUT OIL · Elstar Fats Coconut · Dry",
      },
      {
        "grams": 145,
        "id": "PI-ING-000514",
        "main": false,
        "name": "Sucrose",
      },
      {
        "grams": 100,
        "id": "PI-ING-000494",
        "main": false,
        "name": "Dextrose (monohydrate)",
      },
      {
        "grams": 53.1,
        "id": "PI-ING-000456",
        "main": false,
        "name": "Inulin",
      },
      {
        "grams": 2,
        "id": "PI-ING-000492",
        "main": false,
        "name": "Tara gum",
      },
    ],
    "npac": 53.049,
    "pac": 33.689,
    "pod": 22.58,
    "protein": 0.175,
    "score": 10,
    "solids": 36.495,
    "sugars": 24.502,
    "temperature": -12,
    "violations": [],
    "water": 63.505,
  },
  {
    "batch": 1000,
    "fat": 5.8,
    "fiber": 5.014,
    "ice": 49.533,
    "ingredients": [
      {
        "grams": 397.4,
        "id": "PI-ING-001409",
        "main": false,
        "name": "Water",
      },
      {
        "grams": 250,
        "id": "PI-ING-001587",
        "main": false,
        "name": "ALMOND DRINK · Beverage · Chilled",
      },
      {
        "grams": 52.5,
        "id": "PI-ING-000163",
        "main": false,
        "name": "REFINED COCONUT OIL · Elstar Fats Coconut · Dry",
      },
      {
        "grams": 95,
        "id": "PI-ING-000514",
        "main": false,
        "name": "Sucrose",
      },
      {
        "grams": 150,
        "id": "PI-ING-000494",
        "main": false,
        "name": "Dextrose (monohydrate)",
      },
      {
        "grams": 53.1,
        "id": "PI-ING-000456",
        "main": false,
        "name": "Inulin",
      },
      {
        "grams": 2,
        "id": "PI-ING-000492",
        "main": false,
        "name": "Tara gum",
      },
    ],
    "npac": 58.57,
    "pac": 37.429,
    "pod": 20.984,
    "protein": 0.175,
    "score": 10,
    "solids": 36.095,
    "sugars": 24.102,
    "temperature": -13,
    "violations": [],
    "water": 63.904,
  },
]
`;

exports[`Vegan Gelato Engine — real Mapper formulation matrix > banana routes distinctly across −11/−12/−13 1`] = `
[
  {
    "batch": 1000,
    "fat": 2.633,
    "fiber": 4.062,
    "ice": 49.079,
    "ingredients": [
      {
        "grams": 324.3,
        "id": "PI-ING-001589",
        "main": true,
        "name": "BANANA · Puree",
      },
      {
        "grams": 296.216,
        "id": "PI-ING-001409",
        "main": false,
        "name": "Water",
      },
      {
        "grams": 154.395,
        "id": "PI-ING-001565",
        "main": false,
        "name": "OAT DRINK · Beverage · Chilled · BIO",
      },
      {
        "grams": 24.321,
        "id": "PI-ING-000163",
        "main": false,
        "name": "REFINED COCONUT OIL · Elstar Fats Coconut · Dry",
      },
      {
        "grams": 142.597,
        "id": "PI-ING-000514",
        "main": false,
        "name": "Sucrose",
      },
      {
        "grams": 12.812,
        "id": "PI-ING-000494",
        "main": false,
        "name": "Dextrose (monohydrate)",
      },
      {
        "grams": 43.358,
        "id": "PI-ING-000456",
        "main": false,
        "name": "Inulin",
      },
      {
        "grams": 2,
        "id": "PI-ING-000492",
        "main": false,
        "name": "Tara gum",
      },
    ],
    "npac": 38.136,
    "pac": 26.316,
    "pod": 22.206,
    "protein": 0.386,
    "score": 10,
    "solids": 30.994,
    "sugars": 22.039,
    "temperature": -11,
    "violations": [],
    "water": 69.006,
  },
  {
    "batch": 1000,
    "fat": 2.967,
    "fiber": 4.557,
    "ice": 50.336,
    "ingredients": [
      {
        "grams": 324.3,
        "id": "PI-ING-001589",
        "main": true,
        "name": "BANANA · Puree",
      },
      {
        "grams": 248.309,
        "id": "PI-ING-001409",
        "main": false,
        "name": "Water",
      },
      {
        "grams": 173.99,
        "id": "PI-ING-001565",
        "main": false,
        "name": "OAT DRINK · Beverage · Chilled · BIO",
      },
      {
        "grams": 27.408,
        "id": "PI-ING-000163",
        "main": false,
        "name": "REFINED COCONUT OIL · Elstar Fats Coconut · Dry",
      },
      {
        "grams": 128.066,
        "id": "PI-ING-000514",
        "main": false,
        "name": "Sucrose",
      },
      {
        "grams": 47.066,
        "id": "PI-ING-000494",
        "main": false,
        "name": "Dextrose (monohydrate)",
      },
      {
        "grams": 48.861,
        "id": "PI-ING-000456",
        "main": false,
        "name": "Inulin",
      },
      {
        "grams": 2,
        "id": "PI-ING-000492",
        "main": false,
        "name": "Tara gum",
      },
    ],
    "npac": 46.658,
    "pac": 30.945,
    "pod": 23.165,
    "protein": 0.394,
    "score": 10,
    "solids": 33.677,
    "sugars": 23.817,
    "temperature": -12,
    "violations": [],
    "water": 66.323,
  },
  {
    "batch": 1000,
    "fat": 3.004,
    "fiber": 4.613,
    "ice": 49.731,
    "ingredients": [
      {
        "grams": 324.3,
        "id": "PI-ING-001589",
        "main": true,
        "name": "BANANA · Puree",
      },
      {
        "grams": 242.971,
        "id": "PI-ING-001409",
        "main": false,
        "name": "Water",
      },
      {
        "grams": 176.174,
        "id": "PI-ING-001565",
        "main": false,
        "name": "OAT DRINK · Beverage · Chilled · BIO",
      },
      {
        "grams": 27.752,
        "id": "PI-ING-000163",
        "main": false,
        "name": "REFINED COCONUT OIL · Elstar Fats Coconut · Dry",
      },
      {
        "grams": 88.376,
        "id": "PI-ING-000514",
        "main": false,
        "name": "Sucrose",
      },
      {
        "grams": 88.954,
        "id": "PI-ING-000494",
        "main": false,
        "name": "Dextrose (monohydrate)",
      },
      {
        "grams": 49.474,
        "id": "PI-ING-000456",
        "main": false,
        "name": "Inulin",
      },
      {
        "grams": 2,
        "id": "PI-ING-000492",
        "main": false,
        "name": "Tara gum",
      },
    ],
    "npac": 51.725,
    "pac": 34.308,
    "pod": 22.056,
    "protein": 0.395,
    "score": 10,
    "solids": 33.671,
    "sugars": 23.711,
    "temperature": -13,
    "violations": [],
    "water": 66.329,
  },
]
`;

exports[`Vegan Gelato Engine — real Mapper formulation matrix > calculates verified pea/rice proteins without any dairy gate 1`] = `
{
  "batch": 1000,
  "fat": 5.715,
  "fiber": 5.003,
  "ice": 49.499,
  "ingredients": [
    {
      "grams": 377.4,
      "id": "PI-ING-001409",
      "main": false,
      "name": "Water",
    },
    {
      "grams": 250,
      "id": "PI-ING-001565",
      "main": false,
      "name": "OAT DRINK · Beverage · Chilled · BIO",
    },
    {
      "grams": 52.5,
      "id": "PI-ING-000163",
      "main": false,
      "name": "REFINED COCONUT OIL · Elstar Fats Coconut · Dry",
    },
    {
      "grams": 95,
      "id": "PI-ING-000514",
      "main": false,
      "name": "Sucrose",
    },
    {
      "grams": 150,
      "id": "PI-ING-000494",
      "main": false,
      "name": "Dextrose (monohydrate)",
    },
    {
      "grams": 53.1,
      "id": "PI-ING-000456",
      "main": false,
      "name": "Inulin",
    },
    {
      "grams": 2,
      "id": "PI-ING-000492",
      "main": false,
      "name": "Tara gum",
    },
    {
      "grams": 10,
      "id": "PI-ING-000451",
      "main": false,
      "name": "PEA PROTEIN · Protein · Dry",
    },
    {
      "grams": 10,
      "id": "PI-ING-000452",
      "main": false,
      "name": "RICE PROTEIN · Protein · Dry",
    },
  ],
  "npac": 59.726,
  "pac": 37.213,
  "pod": 20.737,
  "protein": 1.757,
  "score": 10,
  "solids": 37.693,
  "sugars": 24.325,
  "violations": [],
  "water": 62.306,
}
`;

exports[`Vegan Gelato Engine — real Mapper formulation matrix > cocoa routes distinctly across −11/−12/−13 1`] = `
[
  {
    "batch": 1000,
    "fat": 5.812,
    "fiber": 6.894,
    "ice": 45.21,
    "ingredients": [
      {
        "grams": 59.6,
        "id": "PI-ING-001578",
        "main": true,
        "name": "COCOA ALKALIZED 100% · Cacao Barry Cocoa Powder",
      },
      {
        "grams": 370.797,
        "id": "PI-ING-001409",
        "main": false,
        "name": "Water",
      },
      {
        "grams": 245.664,
        "id": "PI-ING-001565",
        "main": false,
        "name": "OAT DRINK · Beverage · Chilled · BIO",
      },
      {
        "grams": 41.221,
        "id": "PI-ING-000163",
        "main": false,
        "name": "REFINED COCONUT OIL · Elstar Fats Coconut · Dry",
      },
      {
        "grams": 206.009,
        "id": "PI-ING-000514",
        "main": false,
        "name": "Sucrose",
      },
      {
        "grams": 19.093,
        "id": "PI-ING-000494",
        "main": false,
        "name": "Dextrose (monohydrate)",
      },
      {
        "grams": 55.615,
        "id": "PI-ING-000456",
        "main": false,
        "name": "Inulin",
      },
      {
        "grams": 2,
        "id": "PI-ING-000492",
        "main": false,
        "name": "Tara gum",
      },
    ],
    "npac": 41.801,
    "pac": 25.156,
    "pod": 22.932,
    "protein": 1.225,
    "score": 10,
    "solids": 39.82,
    "sugars": 23.365,
    "temperature": -11,
    "violations": [],
    "water": 60.18,
  },
  {
    "batch": 1000,
    "fat": 5.907,
    "fiber": 7,
    "ice": 50.325,
    "ingredients": [
      {
        "grams": 59.6,
        "id": "PI-ING-001578",
        "main": true,
        "name": "COCOA ALKALIZED 100% · Cacao Barry Cocoa Powder",
      },
      {
        "grams": 358.7,
        "id": "PI-ING-001409",
        "main": false,
        "name": "Water",
      },
      {
        "grams": 250.9,
        "id": "PI-ING-001565",
        "main": false,
        "name": "OAT DRINK · Beverage · Chilled · BIO",
      },
      {
        "grams": 42.1,
        "id": "PI-ING-000163",
        "main": false,
        "name": "REFINED COCONUT OIL · Elstar Fats Coconut · Dry",
      },
      {
        "grams": 170.4,
        "id": "PI-ING-000514",
        "main": false,
        "name": "Sucrose",
      },
      {
        "grams": 59.5,
        "id": "PI-ING-000494",
        "main": false,
        "name": "Dextrose (monohydrate)",
      },
      {
        "grams": 56.8,
        "id": "PI-ING-000456",
        "main": false,
        "name": "Inulin",
      },
      {
        "grams": 2,
        "id": "PI-ING-000492",
        "main": false,
        "name": "Tara gum",
      },
    ],
    "npac": 47.98,
    "pac": 28.683,
    "pod": 22.143,
    "protein": 1.227,
    "score": 10,
    "solids": 40.218,
    "sugars": 23.543,
    "temperature": -12,
    "violations": [],
    "water": 59.782,
  },
  {
    "batch": 1000,
    "fat": 5.907,
    "fiber": 7,
    "ice": 49.669,
    "ingredients": [
      {
        "grams": 59.6,
        "id": "PI-ING-001578",
        "main": true,
        "name": "COCOA ALKALIZED 100% · Cacao Barry Cocoa Powder",
      },
      {
        "grams": 358.7,
        "id": "PI-ING-001409",
        "main": false,
        "name": "Water",
      },
      {
        "grams": 250.9,
        "id": "PI-ING-001565",
        "main": false,
        "name": "OAT DRINK · Beverage · Chilled · BIO",
      },
      {
        "grams": 42.1,
        "id": "PI-ING-000163",
        "main": false,
        "name": "REFINED COCONUT OIL · Elstar Fats Coconut · Dry",
      },
      {
        "grams": 120.4,
        "id": "PI-ING-000514",
        "main": false,
        "name": "Sucrose",
      },
      {
        "grams": 109.5,
        "id": "PI-ING-000494",
        "main": false,
        "name": "Dextrose (monohydrate)",
      },
      {
        "grams": 56.8,
        "id": "PI-ING-000456",
        "main": false,
        "name": "Inulin",
      },
      {
        "grams": 2,
        "id": "PI-ING-000492",
        "main": false,
        "name": "Tara gum",
      },
    ],
    "npac": 53.875,
    "pac": 32.423,
    "pod": 20.547,
    "protein": 1.227,
    "score": 10,
    "solids": 39.818,
    "sugars": 23.143,
    "temperature": -13,
    "violations": [],
    "water": 60.182,
  },
]
`;

exports[`Vegan Gelato Engine — real Mapper formulation matrix > keeps the invalid coconut-milk high-water reference blocked and rescues a verified high-water alternative 1`] = `
{
  "before": {
    "batch": 1000,
    "fat": 2.325,
    "fiber": 4.93,
    "ice": 50.575,
    "ingredients": [
      {
        "grams": 250,
        "id": "PI-ING-001565",
        "main": false,
        "name": "OAT DRINK · Beverage · Chilled · BIO",
      },
      {
        "grams": 550,
        "id": "water",
        "main": false,
        "name": "Water",
      },
      {
        "grams": 20,
        "id": "PI-ING-000163",
        "main": false,
        "name": "REFINED COCONUT OIL · Elstar Fats Coconut · Dry",
      },
      {
        "grams": 70,
        "id": "sucrose",
        "main": false,
        "name": "Sucrose",
      },
      {
        "grams": 55,
        "id": "dextrose",
        "main": false,
        "name": "Dextrose",
      },
      {
        "grams": 53,
        "id": "inulin",
        "main": false,
        "name": "Inulin",
      },
      {
        "grams": 2,
        "id": "tara_gum",
        "main": false,
        "name": "Tara gum",
      },
    ],
    "npac": 22.615,
    "pac": 17.814,
    "pod": 11.769,
    "protein": 0.1,
    "score": 5,
    "solids": 21.226,
    "sugars": 13.085,
    "violations": [
      "npac",
      "pod",
      "water",
      "total_solids",
    ],
    "water": 78.774,
  },
  "rejectedAfter": {
    "batch": 1000,
    "fat": 1.676,
    "fiber": 19.118,
    "ice": 49.674,
    "ingredients": [
      {
        "grams": 180.217,
        "id": "PI-ING-001565",
        "main": false,
        "name": "OAT DRINK · Beverage · Chilled · BIO",
      },
      {
        "grams": 396.478,
        "id": "water",
        "main": false,
        "name": "Water",
      },
      {
        "grams": 14.417,
        "id": "PI-ING-000163",
        "main": false,
        "name": "REFINED COCONUT OIL · Elstar Fats Coconut · Dry",
      },
      {
        "grams": 50.461,
        "id": "sucrose",
        "main": false,
        "name": "Sucrose",
      },
      {
        "grams": 145.848,
        "id": "dextrose",
        "main": false,
        "name": "Dextrose",
      },
      {
        "grams": 211.137,
        "id": "inulin",
        "main": false,
        "name": "Inulin",
      },
      {
        "grams": 1.442,
        "id": "tara_gum",
        "main": false,
        "name": "Tara gum",
      },
    ],
    "npac": 53.685,
    "pac": 31.406,
    "pod": 15.714,
    "protein": 0.072,
    "score": 10,
    "solids": 41.5,
    "sugars": 19.203,
    "violations": [],
    "water": 58.5,
  },
}
`;

exports[`Vegan Gelato Engine — real Mapper formulation matrix > neutral routes distinctly across −11/−12/−13 1`] = `
[
  {
    "batch": 1000,
    "fat": 5.105,
    "fiber": 4.536,
    "ice": 45.533,
    "ingredients": [
      {
        "grams": 448.072,
        "id": "PI-ING-001409",
        "main": false,
        "name": "Water",
      },
      {
        "grams": 228.908,
        "id": "PI-ING-001565",
        "main": false,
        "name": "OAT DRINK · Beverage · Chilled · BIO",
      },
      {
        "grams": 48.071,
        "id": "PI-ING-000163",
        "main": false,
        "name": "REFINED COCONUT OIL · Elstar Fats Coconut · Dry",
      },
      {
        "grams": 169.392,
        "id": "PI-ING-000514",
        "main": false,
        "name": "Sucrose",
      },
      {
        "grams": 54.938,
        "id": "PI-ING-000494",
        "main": false,
        "name": "Dextrose (monohydrate)",
      },
      {
        "grams": 48.62,
        "id": "PI-ING-000456",
        "main": false,
        "name": "Inulin",
      },
      {
        "grams": 2,
        "id": "PI-ING-000492",
        "main": false,
        "name": "Tara gum",
      },
    ],
    "npac": 41.495,
    "pac": 27.642,
    "pod": 21.618,
    "protein": 0.092,
    "score": 10,
    "solids": 33.385,
    "sugars": 22.932,
    "temperature": -11,
    "violations": [],
    "water": 66.615,
  },
  {
    "batch": 1000,
    "fat": 5.575,
    "fiber": 4.939,
    "ice": 50.292,
    "ingredients": [
      {
        "grams": 397.4,
        "id": "PI-ING-001409",
        "main": false,
        "name": "Water",
      },
      {
        "grams": 250,
        "id": "PI-ING-001565",
        "main": false,
        "name": "OAT DRINK · Beverage · Chilled · BIO",
      },
      {
        "grams": 52.5,
        "id": "PI-ING-000163",
        "main": false,
        "name": "REFINED COCONUT OIL · Elstar Fats Coconut · Dry",
      },
      {
        "grams": 145,
        "id": "PI-ING-000514",
        "main": false,
        "name": "Sucrose",
      },
      {
        "grams": 100,
        "id": "PI-ING-000494",
        "main": false,
        "name": "Dextrose (monohydrate)",
      },
      {
        "grams": 53.1,
        "id": "PI-ING-000456",
        "main": false,
        "name": "Inulin",
      },
      {
        "grams": 2,
        "id": "PI-ING-000492",
        "main": false,
        "name": "Tara gum",
      },
    ],
    "npac": 51.946,
    "pac": 33.18,
    "pod": 22.333,
    "protein": 0.1,
    "score": 10,
    "solids": 36.126,
    "sugars": 24.725,
    "temperature": -12,
    "violations": [],
    "water": 63.874,
  },
  {
    "batch": 1000,
    "fat": 5.575,
    "fiber": 4.939,
    "ice": 49.566,
    "ingredients": [
      {
        "grams": 397.4,
        "id": "PI-ING-001409",
        "main": false,
        "name": "Water",
      },
      {
        "grams": 250,
        "id": "PI-ING-001565",
        "main": false,
        "name": "OAT DRINK · Beverage · Chilled · BIO",
      },
      {
        "grams": 52.5,
        "id": "PI-ING-000163",
        "main": false,
        "name": "REFINED COCONUT OIL · Elstar Fats Coconut · Dry",
      },
      {
        "grams": 95,
        "id": "PI-ING-000514",
        "main": false,
        "name": "Sucrose",
      },
      {
        "grams": 150,
        "id": "PI-ING-000494",
        "main": false,
        "name": "Dextrose (monohydrate)",
      },
      {
        "grams": 53.1,
        "id": "PI-ING-000456",
        "main": false,
        "name": "Inulin",
      },
      {
        "grams": 2,
        "id": "PI-ING-000492",
        "main": false,
        "name": "Tara gum",
      },
    ],
    "npac": 57.442,
    "pac": 36.921,
    "pod": 20.737,
    "protein": 0.1,
    "score": 10,
    "solids": 35.725,
    "sugars": 24.325,
    "temperature": -13,
    "violations": [],
    "water": 64.274,
  },
]
`;

exports[`Vegan Gelato Engine — real Mapper formulation matrix > pistachio routes distinctly across −11/−12/−13 1`] = `
[
  {
    "batch": 1000,
    "fat": 9.146,
    "fiber": 6.273,
    "ice": 46.304,
    "ingredients": [
      {
        "grams": 119.9,
        "id": "PI-ING-000614",
        "main": true,
        "name": "PISTACHIO · Aldori Paste · 100% Nut",
      },
      {
        "grams": 331.6,
        "id": "PI-ING-001409",
        "main": false,
        "name": "Water",
      },
      {
        "grams": 261.6,
        "id": "PI-ING-001565",
        "main": false,
        "name": "OAT DRINK · Beverage · Chilled · BIO",
      },
      {
        "grams": 34.1,
        "id": "PI-ING-000163",
        "main": false,
        "name": "REFINED COCONUT OIL · Elstar Fats Coconut · Dry",
      },
      {
        "grams": 167.4,
        "id": "PI-ING-000514",
        "main": false,
        "name": "Sucrose",
      },
      {
        "grams": 28.8,
        "id": "PI-ING-000494",
        "main": false,
        "name": "Dextrose (monohydrate)",
      },
      {
        "grams": 54.6,
        "id": "PI-ING-000456",
        "main": false,
        "name": "Inulin",
      },
      {
        "grams": 2,
        "id": "PI-ING-000492",
        "main": false,
        "name": "Tara gum",
      },
    ],
    "npac": 40.765,
    "pac": 23.954,
    "pod": 20.696,
    "protein": 2.503,
    "score": 10,
    "solids": 41.239,
    "sugars": 21.385,
    "temperature": -11,
    "violations": [],
    "water": 58.761,
  },
  {
    "batch": 1000,
    "fat": 9.146,
    "fiber": 6.273,
    "ice": 50.345,
    "ingredients": [
      {
        "grams": 119.9,
        "id": "PI-ING-000614",
        "main": true,
        "name": "PISTACHIO · Aldori Paste · 100% Nut",
      },
      {
        "grams": 331.6,
        "id": "PI-ING-001409",
        "main": false,
        "name": "Water",
      },
      {
        "grams": 261.6,
        "id": "PI-ING-001565",
        "main": false,
        "name": "OAT DRINK · Beverage · Chilled · BIO",
      },
      {
        "grams": 34.1,
        "id": "PI-ING-000163",
        "main": false,
        "name": "REFINED COCONUT OIL · Elstar Fats Coconut · Dry",
      },
      {
        "grams": 127.4,
        "id": "PI-ING-000514",
        "main": false,
        "name": "Sucrose",
      },
      {
        "grams": 68.8,
        "id": "PI-ING-000494",
        "main": false,
        "name": "Dextrose (monohydrate)",
      },
      {
        "grams": 54.6,
        "id": "PI-ING-000456",
        "main": false,
        "name": "Inulin",
      },
      {
        "grams": 2,
        "id": "PI-ING-000492",
        "main": false,
        "name": "Tara gum",
      },
    ],
    "npac": 45.608,
    "pac": 26.946,
    "pod": 19.42,
    "protein": 2.503,
    "score": 10,
    "solids": 40.919,
    "sugars": 21.065,
    "temperature": -12,
    "violations": [],
    "water": 59.081,
  },
  {
    "batch": 1000,
    "fat": 9.146,
    "fiber": 6.273,
    "ice": 49.735,
    "ingredients": [
      {
        "grams": 119.9,
        "id": "PI-ING-000614",
        "main": true,
        "name": "PISTACHIO · Aldori Paste · 100% Nut",
      },
      {
        "grams": 331.6,
        "id": "PI-ING-001409",
        "main": false,
        "name": "Water",
      },
      {
        "grams": 261.6,
        "id": "PI-ING-001565",
        "main": false,
        "name": "OAT DRINK · Beverage · Chilled · BIO",
      },
      {
        "grams": 34.1,
        "id": "PI-ING-000163",
        "main": false,
        "name": "REFINED COCONUT OIL · Elstar Fats Coconut · Dry",
      },
      {
        "grams": 77.4,
        "id": "PI-ING-000514",
        "main": false,
        "name": "Sucrose",
      },
      {
        "grams": 118.8,
        "id": "PI-ING-000494",
        "main": false,
        "name": "Dextrose (monohydrate)",
      },
      {
        "grams": 54.6,
        "id": "PI-ING-000456",
        "main": false,
        "name": "Inulin",
      },
      {
        "grams": 2,
        "id": "PI-ING-000492",
        "main": false,
        "name": "Tara gum",
      },
    ],
    "npac": 51.589,
    "pac": 30.686,
    "pod": 17.824,
    "protein": 2.503,
    "score": 10,
    "solids": 40.519,
    "sugars": 20.665,
    "temperature": -13,
    "violations": [],
    "water": 59.481,
  },
]
`;

exports[`Vegan Gelato Engine — real Mapper formulation matrix > preserves the Strawberry/Banana 1:1 Multi-Main contract 1`] = `
{
  "batch": 1000,
  "fat": 3.682,
  "fiber": 5.851,
  "ice": 49.571,
  "ingredients": [
    {
      "grams": 150,
      "id": "PI-ING-001589",
      "main": true,
      "name": "BANANA · Puree",
    },
    {
      "grams": 150,
      "id": "PI-ING-001553",
      "main": true,
      "name": "STRAWBERRIES · Fresh Fruit",
    },
    {
      "grams": 176.5,
      "id": "PI-ING-001409",
      "main": false,
      "name": "Water",
    },
    {
      "grams": 213.3,
      "id": "PI-ING-001565",
      "main": false,
      "name": "OAT DRINK · Beverage · Chilled · BIO",
    },
    {
      "grams": 33.6,
      "id": "PI-ING-000163",
      "main": false,
      "name": "REFINED COCONUT OIL · Elstar Fats Coconut · Dry",
    },
    {
      "grams": 107,
      "id": "PI-ING-000514",
      "main": false,
      "name": "Sucrose",
    },
    {
      "grams": 107.7,
      "id": "PI-ING-000494",
      "main": false,
      "name": "Dextrose (monohydrate)",
    },
    {
      "grams": 59.9,
      "id": "PI-ING-000456",
      "main": false,
      "name": "Inulin",
    },
    {
      "grams": 2,
      "id": "PI-ING-000492",
      "main": false,
      "name": "Tara gum",
    },
  ],
  "npac": 57.272,
  "pac": 36.266,
  "pod": 22.925,
  "protein": 0.34,
  "score": 10,
  "solids": 36.678,
  "sugars": 25.113,
  "violations": [],
  "water": 63.322,
}
`;

exports[`Vegan Gelato Engine — real Mapper formulation matrix > preserves the Strawberry/Banana 2:1 Multi-Main contract 1`] = `
{
  "batch": 1000,
  "fat": 3.667,
  "fiber": 5.751,
  "ice": 49.513,
  "ingredients": [
    {
      "grams": 200,
      "id": "PI-ING-001589",
      "main": true,
      "name": "BANANA · Puree",
    },
    {
      "grams": 100,
      "id": "PI-ING-001553",
      "main": true,
      "name": "STRAWBERRIES · Fresh Fruit",
    },
    {
      "grams": 176.5,
      "id": "PI-ING-001409",
      "main": false,
      "name": "Water",
    },
    {
      "grams": 213.3,
      "id": "PI-ING-001565",
      "main": false,
      "name": "OAT DRINK · Beverage · Chilled · BIO",
    },
    {
      "grams": 33.6,
      "id": "PI-ING-000163",
      "main": false,
      "name": "REFINED COCONUT OIL · Elstar Fats Coconut · Dry",
    },
    {
      "grams": 107,
      "id": "PI-ING-000514",
      "main": false,
      "name": "Sucrose",
    },
    {
      "grams": 107.7,
      "id": "PI-ING-000494",
      "main": false,
      "name": "Dextrose (monohydrate)",
    },
    {
      "grams": 59.9,
      "id": "PI-ING-000456",
      "main": false,
      "name": "Inulin",
    },
    {
      "grams": 2,
      "id": "PI-ING-000492",
      "main": false,
      "name": "Tara gum",
    },
  ],
  "npac": 59.268,
  "pac": 37.159,
  "pod": 23.572,
  "protein": 0.355,
  "score": 10,
  "solids": 37.303,
  "sugars": 25.743,
  "violations": [],
  "water": 62.697,
}
`;

exports[`Vegan Gelato Engine — real Mapper formulation matrix > strawberry routes distinctly across −11/−12/−13 1`] = `
[
  {
    "batch": 1000,
    "fat": 3.708,
    "fiber": 6.16,
    "ice": 45.234,
    "ingredients": [
      {
        "grams": 324.3,
        "id": "PI-ING-001553",
        "main": true,
        "name": "STRAWBERRIES · Fresh Fruit",
      },
      {
        "grams": 156.042,
        "id": "PI-ING-001409",
        "main": false,
        "name": "Water",
      },
      {
        "grams": 211.729,
        "id": "PI-ING-001565",
        "main": false,
        "name": "OAT DRINK · Beverage · Chilled · BIO",
      },
      {
        "grams": 33.352,
        "id": "PI-ING-000163",
        "main": false,
        "name": "REFINED COCONUT OIL · Elstar Fats Coconut · Dry",
      },
      {
        "grams": 195.549,
        "id": "PI-ING-000514",
        "main": false,
        "name": "Sucrose",
      },
      {
        "grams": 17.57,
        "id": "PI-ING-000494",
        "main": false,
        "name": "Dextrose (monohydrate)",
      },
      {
        "grams": 59.459,
        "id": "PI-ING-000456",
        "main": false,
        "name": "Inulin",
      },
      {
        "grams": 2,
        "id": "PI-ING-000492",
        "main": false,
        "name": "Tara gum",
      },
    ],
    "npac": 41.779,
    "pac": 26.925,
    "pod": 23.866,
    "protein": 0.312,
    "score": 10,
    "solids": 35.554,
    "sugars": 23.92,
    "temperature": -11,
    "violations": [],
    "water": 64.446,
  },
  {
    "batch": 1000,
    "fat": 3.735,
    "fiber": 6.2,
    "ice": 50.336,
    "ingredients": [
      {
        "grams": 324.3,
        "id": "PI-ING-001553",
        "main": true,
        "name": "STRAWBERRIES · Fresh Fruit",
      },
      {
        "grams": 152.2,
        "id": "PI-ING-001409",
        "main": false,
        "name": "Water",
      },
      {
        "grams": 213.3,
        "id": "PI-ING-001565",
        "main": false,
        "name": "OAT DRINK · Beverage · Chilled · BIO",
      },
      {
        "grams": 33.6,
        "id": "PI-ING-000163",
        "main": false,
        "name": "REFINED COCONUT OIL · Elstar Fats Coconut · Dry",
      },
      {
        "grams": 157,
        "id": "PI-ING-000514",
        "main": false,
        "name": "Sucrose",
      },
      {
        "grams": 57.7,
        "id": "PI-ING-000494",
        "main": false,
        "name": "Dextrose (monohydrate)",
      },
      {
        "grams": 59.9,
        "id": "PI-ING-000456",
        "main": false,
        "name": "Inulin",
      },
      {
        "grams": 2,
        "id": "PI-ING-000492",
        "main": false,
        "name": "Tara gum",
      },
    ],
    "npac": 46.633,
    "pac": 30.092,
    "pod": 22.749,
    "protein": 0.312,
    "score": 10,
    "solids": 35.47,
    "sugars": 23.764,
    "temperature": -12,
    "violations": [],
    "water": 64.53,
  },
  {
    "batch": 1000,
    "fat": 3.735,
    "fiber": 6.2,
    "ice": 49.72,
    "ingredients": [
      {
        "grams": 324.3,
        "id": "PI-ING-001553",
        "main": true,
        "name": "STRAWBERRIES · Fresh Fruit",
      },
      {
        "grams": 152.2,
        "id": "PI-ING-001409",
        "main": false,
        "name": "Water",
      },
      {
        "grams": 213.3,
        "id": "PI-ING-001565",
        "main": false,
        "name": "OAT DRINK · Beverage · Chilled · BIO",
      },
      {
        "grams": 33.6,
        "id": "PI-ING-000163",
        "main": false,
        "name": "REFINED COCONUT OIL · Elstar Fats Coconut · Dry",
      },
      {
        "grams": 107,
        "id": "PI-ING-000514",
        "main": false,
        "name": "Sucrose",
      },
      {
        "grams": 107.7,
        "id": "PI-ING-000494",
        "main": false,
        "name": "Dextrose (monohydrate)",
      },
      {
        "grams": 59.9,
        "id": "PI-ING-000456",
        "main": false,
        "name": "Inulin",
      },
      {
        "grams": 2,
        "id": "PI-ING-000492",
        "main": false,
        "name": "Tara gum",
      },
    ],
    "npac": 52.106,
    "pac": 33.832,
    "pod": 21.153,
    "protein": 0.312,
    "score": 10,
    "solids": 35.07,
    "sugars": 23.364,
    "temperature": -13,
    "violations": [],
    "water": 64.93,
  },
]
`;
